install truffle-assertions / remake market test

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "ethereum-datetime": "^1.0.0",
     "openzeppelin-solidity": "2.0.0",
+    "truffle-assertions": "^0.8.0",
     "truffle-plugin-modularizer": "^1.2.3"
   },
   "scripts": {
