--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
   "dependencies": {
     "ethereum-datetime": "^1.0.0",
     "openzeppelin-solidity": "2.0.0",
-    "truffle-assertions": "^0.8.0",
-    "truffle-plugin-modularizer": "^1.2.3"
+    "standard": "^12.0.1",
+    "truffle-assertions": "^0.8.0"
   },
   "scripts": {
     "standard": "./node_modules/.bin/standard test/** src/** --fix",
     "ethlint": "./node_modules/.bin/solium -d contracts",
-    "modularize": "./node_modules/.bin/truffle run modularize",
-    "precommit": "lint-staged && npm run test && npm run modularize && git add src/index.js",
+    "precommit": "lint-staged && npm run test",
     "test": "scripts/test.sh"
   },
   "standard": {
