--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "truffle-hdwallet-provider": "^0.0.5"
   },
   "dependencies": {
+    "eth-crypto": "^1.3.3",
     "ethereum-datetime": "^1.0.0",
     "openzeppelin-solidity": "2.0.0",
     "standard": "^12.0.1",
